fix: clanky zoom behavior with too much math

--- a/apps/web/app/board/character-bar/index.module.css
+++ b/apps/web/app/board/character-bar/index.module.css
@@ -1,5 +1,5 @@
 .characterCard {
-  @apply fixed bottom-0 left-0 right-0 pb-2 pt-2 supports-[backdrop-filter]:bg-background/60 z-50 border-t;
+  @apply fixed bottom-0 left-0 right-0 pb-2 pt-2 supports-[backdrop-filter]:bg-background/60 z-50 border-t rounded-none;
 }
 
 .characterCardContent {
